--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.12.2",
+    "razorpay": "^2.9.6",
     "stripe": "^17.7.0",
     "uuid": "^11.1.0"
   }
